[FEATURE] add visual filter

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,9 +1,15 @@
 # This is the resource bundle for upd#Texts for manifest.json
 
 #XTIT: Application name
-appTitle=appTitle
+appTitle=Analytical app
 
 #YDES: Application description
-appDescription=appDescription
+appDescription=Analytical app
 
-labelExampleFacet=Example
+partnerSH=Partner search help
+
+statusSH=Status search help
+
+partnerByCount=Partner by Count
+
+contentAreaTitle=Act analytics
